Closed Bug 754196 Opened 13 years ago Closed 13 years ago

<SELECT> drop-down list scrolls with mouse wheel unwillingly if you move mouse pointer at the same time

Categories

(Core :: Layout, defect)

15 Branch
x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15
Tracking Status
firefox14 - unaffected

People

(Reporter: alice0775, Assigned: roc)

References

Details

(Keywords: regression)

Attachments

(2 files)

Build Identifier: http://hg.mozilla.org/mozilla-central/rev/d37d4edce6dd Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/15.0 Firefox/15.0a1 ID:20120510145529 <SELECT> drop-down list scrolls with mouse wheel unwillingly if you move mouse pointer at the same time Reproducible: Always Steps to Reproduce: 1. Open attached 2. Open drop down list by click <SELECT> field 3. Try to scroll the list with mouse wheel and move mouse pointer at the same time Actual Results: would not scroll Expected Results: should scroll Regression window(m-c) works: http://hg.mozilla.org/mozilla-central/rev/6fe7dd2f8f57 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/15.0 Firefox/15.0a1 ID:20120510021321 fails: http://hg.mozilla.org/mozilla-central/rev/b7b6565d12a0 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/15.0 Firefox/15.0a1 ID:20120510050721 pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=6fe7dd2f8f57&tochange=b7b6565d12a0 Regression window(m-i) works: http://hg.mozilla.org/integration/mozilla-inbound/rev/b5304fd23df9 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/15.0 Firefox/15.0a1 ID:20120509222721 fails: http://hg.mozilla.org/integration/mozilla-inbound/rev/67091352b7d2 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/15.0 Firefox/15.0a1 ID:20120509223521 pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=b5304fd23df9&tochange=67091352b7d2 Regressed by: Bug 681192
Attached file sample
Attached patch fixSplinter Review
Assignee: nobody → roc
Attachment #623883 - Flags: review?(matspal)
Thanks Alice for filing the bug! For regressions that you think should be fixed before release, please add tracking-firefox-? flags. Thanks!!!
I think this fixes bug 754520 as well.
Blocks: 754520
Attachment #623883 - Flags: review?(matspal) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Target Milestone: --- → mozilla15
Yes, but writing a reliable test would not be easy...
The status flags are a bit confusing since 14 isn't actually affected until bug 681192 is uplifted to Aurora (if it's uplifted). Tracking nonetheless.
Bug 681192 is not being uplifted to Aurora (and if it was, we'd uplift this fix along with it).
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: