Bug 754196. If ScrollToShowRect has no need to scroll, don't call ScrollTo, so pending smooth scrolls won't be interrupted. r=matspal